[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oi-tracker"
version = "0.1.0"
description = "Streamlit app to track option chain Open Interest with Zerodha KiteConnect integration."
authors = [
    { name = "Rupinder Singh", email = "rupinder82@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "streamlit",
    "pandas",
    "pytz",
    "kiteconnect",
]

[tool.setuptools.packages.find]
where = ["."]
